<resources>
    <string name="app_name">Кофейня "Бодрость"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sugar">Нужен сахар?</string>
    <string name="adds">Добавки?</string>
    <string name="Deliver">Доставка</string>
    <string name="Pickup">Самовывоз</string>
    <string name="fillText">Заполните данные, мы с вами свяжемся</string>
    <string name="fillName">Введите свое имя</string>
    <string name="fillPhone">Введите свой номер телефона</string>
    <string name="Send">Отправить</string>
    <string name="Search">Найти кафе</string>
    <string name="OrderTitle">Ваш завтрак</string>
    <string name="CafeName">Кофейня “Бодрость”</string>
    <string-array name="coffee">
        <item>Нежный бархатный вкус</item>
        <item>Горький насыщенный вкус</item>
        <item>Молочная пастила</item>
        <item>Игристая карамель</item>
    </string-array>
    <string-array name="tea">
        <item>Индийский чай</item>
        <item>Чай Пуэр</item>
        <item>Чай с мятой</item>
        <item>Чай с мёдом и имберём</item>
        <item>Китайский чай</item>
    </string-array>
    <string-array name="combo">
        <item>Глазунья с беконом</item>
        <item>Бизнес сэндвичи</item>
        <item>Каша овсянная с ягодами</item>
    </string-array>
    <string-array name="cake">
        <item>Бисквитный</item>
        <item>Воздушный</item>
        <item>Кремовый</item>
        <item>Медовик</item>
        <item>Наполеон</item>
    </string-array>
</resources>