<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/menu2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:fontFamily="@font/red_rose_light"
                android:text="@string/CafeName"
                android:textColor="#2E2D2D"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/red_rose_light"
            android:text="@string/OrderTitle"
            android:textColor="#2E2D2D"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/comfe"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                android:layout_marginRight="20dp">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#4D4242"
                    android:textStyle="bold"
                    android:text="Кофе с карамелью"/>
                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:textSize="16sp"
                    android:textColor="#4D4242"
                    android:textStyle="bold"
                    android:text="254 рублей"/>
            </LinearLayout>
        </LinearLayout>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:entries="@array/coffee"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Switch
                android:id="@+id/switchSugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/red_rose_light"
                android:text="@string/sugar" />

            <Switch
                android:id="@+id/switchAdds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:checked="false"
                android:fontFamily="@font/red_rose_light"
                android:text="@string/adds" />
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/rbDeliver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/red_rose_light"
                android:text="@string/Deliver" />

            <RadioButton
                android:id="@+id/rbPickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:checked="true"
                android:fontFamily="@font/red_rose_light"
                android:text="@string/Pickup" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/red_rose_light"
            android:gravity="center"
            android:text="@string/fillText"
            android:textColor="#4D4242"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="#BBF4E3"
            android:fontFamily="@font/red_rose_light"
            android:gravity="center_vertical"
            android:hint="@string/fillName"
            android:inputType="textPersonName"
            android:textColor="#868686"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="#BBF4E3"
            android:fontFamily="@font/red_rose_light"
            android:gravity="center_vertical"
            android:hint="@string/fillPhone"
            android:inputType="phone"
            android:textColor="#868686"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="#A8CAEA"
            android:fontFamily="@font/red_rose_light"
            android:gravity="center"
            android:text="@string/Send"
            android:textAllCaps="false"
            android:textColor="#2E2D2D"
            android:textSize="18sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="#A8CAEA"
            android:fontFamily="@font/red_rose_light"
            android:gravity="center"
            android:text="@string/Search"
            android:textAllCaps="false"
            android:textColor="#2E2D2D"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>
</FrameLayout>